@@ -1,5 +1,8 @@
 CHANGES
 
+2015-12-08
+ * annotate_snps.py: fixed gene_id field, if count_alt == 0: site_type = 'FX'
+
 2015-12-06
  * run_phylo_cnv.py species: allowed word lengths > 28
 
